--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -26,12 +26,12 @@
 					<label for="facility">Casernes</label>
 			  </div>
 			  <div>
-				<input type="checkbox" id="trunck" name="interest" value="trunck" checked>
-				<label for="trunck">Camions</label>
+				<input type="checkbox" id="truck" name="interest" value="truck" checked>
+				<label for="truck">Camions</label>
 		  </div>
 	  </fieldset>
   </form>
-	<script src="js.js">
+	<script src="map.js">
 		
 	</script>
 
