added map page with truck form

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page de creation de camion</title>
+    <title>Page de création de camion</title>
 </head>
 <body>
     <form class="ui form" action="./addData" method="GET" id="addTrukForm">
