finally fixed the fire types checkboxes

--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -37,20 +37,20 @@
             <fieldset name="fireTypeFilter">
                 <legend>Types de feux</legend>
                 <div>
-                    <input type="checkbox" id="fire" name="interest" value="fire" checked>
+                    <input type="checkbox" id="fire" name="interest" value="fire" onclick="master_checkbox(this)" checked>
                     <label for="fire">Feux</label>
                 </div>
                 <!-- <div>
                     <input type="checkbox" id="All_Fires" onclick="toggle(this)" />Feux<br/>
                 </div> -->
-                <script language="JavaScript">
+                <!-- <script language="JavaScript">
                     function toggle(source) {
                         checkboxes = document.getElementsByName('feu');
                         for(var i=0, n=checkboxes.length;i<n;i++) {
                             checkboxes[i].checked = source.checked;
                         }
                     }
-                </script>
+                </script> -->
                 <div class="fire_checkbox">
                     <input type="checkbox" name="feu" id="A" value="a" checked>
                     <label>A</label>
