--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -143,7 +143,7 @@
             <div class="slidecontainer">
                 <label for="facilityRefIDRange">Caserne d'affectation</label>
                 <select name="facilityRefID" id="facilityRefIDRange" >
-                    <option value="81">Caserne n° 81</option>
+                    <option value="249">Caserne n° 249</option>
                   </select>
             </div>
             <button class="ui button" type="button">Cancel</button>
@@ -162,6 +162,7 @@
     </aside_left>
 
 	<script src="map.js"></script>
+    <script src="addTruck.js"></script>
 
 
 </body>
